Fix Home page picture alignment. Update info.

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 html {
     background-color: #303030;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+	font-size: larger;
 	color: aliceblue;
 }
 
@@ -57,24 +58,32 @@ body {
 
 .intro {
 	text-align: center;
-	margin-bottom: 20vh;
 }
 
 .pc {
-	margin: 20vh 0;
+	margin: 10vh 0;
 	width: 100%;	
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+}
+
+.pc-picture {
+	float: right;
+	height: fit-content;
+	width: fit-content;
 }
 
 .pc-picture img {
 	width: auto;
-	height: 50vh;
-	float: right;
+	height: 40vh;
 	padding-left: 3vw;
 }
 
 .pc-text {
-	text-align: left;
-	padding: 20vh 0;
+	text-align: center;
+	float: left;
 }
 
 .resume-text {
